--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -832,6 +832,8 @@ window.onload = function() {
      const tab = urlParams.get('tab');
      if (tab) {
          switchTab(tab);
+     } else {
+         switchTab('editor');
      }
 
      previewResume();
